<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_ros_com</name>
  <version>0.1.0</version>
  <description>Package to interface ROS 2 with PX4</description>

  <maintainer email="nuno.marques@dronesolutions.io">Nuno Marques</maintainer>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="px4_ros_com_mapping_rules.yaml"/>
  </export>
</package>
