<?xml version="1.0"?>
<package format="2">
  <name>px4_ros_com</name>
  <version>0.1.0</version>
  <description>
    Example package to interface ROS with PX4. Requires px4_ros_com ROS2 side
    together with ros1_bridge in order to interface with the PX4 internals
    through Fast RTPS.
  </description>
  <maintainer email="nuno.marques@dronesolutions.io">Nuno Marques</maintainer>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <depend>px4_msgs</depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
    <rosindex>
      <tags>
	<tag>px4</tag>
        <tag>bridge</tag>
      </tags>
    </rosindex>
  </export>
</package>
